<resources>
    <string name="app_name">OLX</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="Or">OR</string>
    <string name="Login_with_Email">Login with Email</string>
    <string name="olx_Term">If you continue, you are accepting OLX Terms and Conditions and Privacy Policy</string>
    <string name="whats_youe_name">Whats your name?</string>
    <string name="StrangerFeel">Stranger feel so impersonal, you know?</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="settings">Settings</string>
    <string name="privacy_logout">Privacy and logout</string>
    <string name="Help_and_support">Help and support</string>
    <string name="Help_center">Help center and legal terms</string>
    <string name="next">Next</string>
    <string name="Chat">Chats</string>
    <string name="select_language">Select Language</string>
    <string name="English">English</string>
    <string name="country_code">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">We will send confirmation code to your phone.</string>
    <string name="title">Enter your phone</string>
    <string name="country">Country</string>
    <string name="india_s_leading_marketplace">India\'s Leading marketplace</string>
    <string name="find_cars_mobile_phones_etc">Find Cars, Mobile Phones etc</string>
    <string name="browse_categories">Browse categories</string>
    <string name="see_all">See all</string>
    <string name="hello">Hello</string>
    <string name="trending">Trending :</string>
    <string name="fresh_recommendations">Fresh recommendations</string>
    <string name="price_not_mentioned">Price not mentioned</string>
    <string name="Navigation_title">Where do you want to buy/sell products?</string>
    <string name="navigation_body">To enjoy all that OLX has to offer for you, we need to know where to look for them.</string>
    <string name="btn_text">Around me</string>
    <string name="phone_message">We sent a 4-digit code to</string>
    <string name="asterix">*</string>
    <string name="resend">RESEND CODE BY CALL</string>
    <string name="dhanashree_rane">Dhanashree Rane</string>
    <string name="view_edit_profile">View and edit profile</string>
    <string name="buy_packages_my_orders">Buy Packages and My Orders</string>
    <string name="packages_orders">Packages,orders,billing and invoices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_messages_yet">No messages, yet?</string>
    <string name="keep_messages">We will keep messages for any items you are trying to buy in here</string>
    <string name="explore">Explore the latest ads</string>
    <string name="start_selling">Start selling</string>
    <string name="search">search</string>
    <string name="showing_results_for">Showing results for :</string>
    <string name="cars">Cars</string>
    <string name="property">Property</string>
    <string name="electronics">Electronics</string>
    <string name="billing_information">Billing Information</string>
    <string name="bill_details">Edit your billing name, address, etc.</string>
    <string name="invoice_details">See and download your invoices.</string>
    <string name="myorder_details">Active, scheduled and expired orders.</string>
    <string name="my_orders">My Orders</string>
    <string name="buy_details">Sell faster, more and at higher margins with packages.</string>
    <string name="buy_packages">Buy Packages</string>
    <string name="location">Location</string>
    <string name="delivery_and_collection">Delivery and Collection</string>
    <string name="hyderabad_mumbai_pune">Hyderabad, Mumbai, Pune</string>
    <string name="show_packages">Show Packages</string>
    <string name="categories">Categories</string>
    <string name="properties">Properties</string>
    <string name="olx_autos_cars">OLX Autos (Cars)</string>
    <string name="jobs">Jobs</string>
    <string name="mobiles">Mobiles</string>
    <string name="electronics_and_appliances">Electronics and Appliances</string>
    <string name="bikes">Bikes</string>
    <string name="commercial_vehicles_and_spares">Commercial Vehicles and Spares</string>
    <string name="fashion">Fashion</string>
    <string name="books_sports_hobbies_and_more">Books, Sports, Hobbies and More</string>
    <string name="pets">Pets</string>
    <string name="nothing_here">Nothing here...</string>
    <string name="active_package">you dont have any active package</string>
    <string name="what_are_you_offering">What are you offering ?</string>
    <string name="invoices">Invoices</string>
    <string name="haven_t_you_triied_our_featured_ads_yet_increase_your_views">Haven\'t you tried our featured ads yet ? Increase your views</string>
    <string name="you_don_t_have_invoices">You don\'t have invoices</string>
    <string name="My_Ads">My Ads</string>
    <string name="you_havent_listed">You havent listed anything yet</string>
    <string name="let_go">Let go of what you dont use anymore</string>
    <string name="post">Post</string>
    <string name="you_havent_liked">You havent liked anything yet</string>
    <string name="collect">Collect all the things you like in one place</string>
    <string name="Discover">Discover</string>
    <string name="more_categories">More categories</string>
    <string name="Brands">Brand *</string>
    <string name="years">Year *</string>
    <string name="Owners">No. of Owners *</string>
    <string name="Add_title">Add title *</string>
    <string name="Describe_selling">Describe what you are selling *</string>
    <string name="mention_the_key">Mention the key fratures of your item (e.g. brand, model, age, type)</string>
    <string name="include_condition">Include condition, features and reason for selling</string>
    <string name="required_fields">*Required fields</string>
    <string name="includes_some_details">Include some details</string>
    <string name="Next">Next</string>
    <string name="_14_9_004">14.9.004</string>
    <string name="version">Version</string>
    <string name="invite_friends_to_olx">Invite friends to OLX</string>
    <string name="test_new_features_in_advance">Test new features in advance</string>
    <string name="become_a_beta_tester">Become a beta tester</string>
    <string name="rate_us">Rate us</string>
    <string name="rate">If you love our app, please take a moment to rate it.</string>
    <string name="help">Help Center</string>
    <string name="privacy">Privacy</string>
    <string name="faq">See FAQ and contact Support</string>
    <string name="create_password">Create password</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="deactivate_account_and_delete_my_data">Deactivate account and delete my data</string>
    <string name="logout_from_all_devices">Logout from all devices</string>
    <string name="continue_without_location">Continue without Location</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email_address">enter email address</string>
    <string name="your_name">enter your name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="say_something_here">say something here</string>
    <string name="contact_information">Contact information</string>
    <string name="_91">+91</string>
    <string name="verification">You have verified your email. It\'s important to allow us to securely communicate with you.</string>
    <string name="facebook">Facebook</string>
    <string name="sign_in_fb">Sign in to Facebook and discover your trusted connections to buyers.</string>
    <string name="connect">Connect</string>
    <string name="connect_google">Connect you OLX account to google, for simplicity and ease.</string>
    <string name="title_activity_mobile">MobileActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="tablets">Tablets</string>
    <string name="Accessories">Accessories</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mobile_phones">Mobile Phones</string>
    <string name="commercial_vehicles">Commercial Vehicle and Spares</string>
    <string name="commercial_other">Commercial and Other Vehicles</string>
    <string name="type">Type *</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="following">following</string>
    <string name="my_network">My network</string>
    <string name="followers">followers</string>
    <string name="chat_post_find_you">Chat, post or follow to let others find you</string>
    <string name="Invite_friends">Invite Friends</string>
    <string name="you_are_not_following">you are not following anybody yet</string>
    <string name="you_are_not_followers">you are not followers anybody yet</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="verify_your_phone">Verify your phone</string>
    <string name="we_will_send_a_confirmation_code_to_your_phone">We will send a confirmation code to your phone</string>
    <string name="email">Email</string>
    <string name="view_dicounts_here">View dicounts here</string>
    <string name="post_more_ads_and_aut_boost">Post more Ads and Aut boost</string>
    <string name="post_more_ads_and_ads_get_boosted_to_the_top_every_few_days">Post more ads and ads get boosted to the top every few days</string>
    <string name="package_available_for_30_days">Package available for 30 days</string>
    <string name="post_more_ads">Post more ads</string>
    <string name="boost_to_top">Boost to top</string>
    <string name="back_on_top_like_a_new_ad">Back on top like a new ad</string>
    <string name="feature">Get noticed with FEATURED tag in a top position</string>
    <string name="sorry_no_offers_available_right_now">Sorry ! No offers available right now.</string>

</resources>