<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MobilePhoneDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TvInclude_Details_Mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:paddingStart="@dimen/dp_60"
            android:text="@string/includes_some_details"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_FullUnderLine1_mobile"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/TvInclude_Details_Mobile"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray" />

        <ImageView
            android:id="@+id/IvBackwardArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/backarrow" />
    </RelativeLayout>

    <EditText
        android:id="@+id/EtBrand_Mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:hint="@string/Brands" />


    <EditText
        android:id="@+id/EtAddTitle_Mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:hint="@string/Add_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/mention_the_key"
        android:textColor="@color/darkGreen" />

    <EditText
        android:id="@+id/EtWhatYouSelling_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:hint="@string/Describe_selling" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/include_condition"
        android:textColor="@color/darkGreen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/required_fields" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnNext_Mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="43dp"
            android:background="@drawable/rectangle_for_tab_layout"
            android:text="@string/Next"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>