<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MobilePhoneDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TvInclude_Details_Tablet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:paddingStart="@dimen/dp_60"
            android:text="@string/includes_some_details"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />
        <View
            android:id="@+id/view_FullUnderLine1_Tablet"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray"
            android:layout_below="@id/TvInclude_Details_Tablet"/>

        <ImageView
            android:id="@+id/IvBackwardArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/backarrow" />
    </RelativeLayout>

    <EditText
        android:id="@+id/EtBrand_Tablet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>


    <EditText
        android:id="@+id/EtAddTitle_Tablet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Add_title"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mention_the_key"
        android:textColor="@color/darkGreen"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>
    <EditText
        android:id="@+id/EtWhatYouSelling_Tablet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Describe_selling"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/include_condition"
        android:textColor="@color/darkGreen"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_fields"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnNext_Tablet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_for_tab_layout"
            android:text="@string/Next"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"
            />
    </RelativeLayout>

</LinearLayout>