<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PhoneDetails"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_20">
        <TextView
            android:id="@+id/tvEnterPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_24"
            android:padding="@dimen/dp_10"
            android:text="@string/login"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@color/marine_blue"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:drawablePadding="@dimen/dp_15"/>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivAvatarLogin"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:scaleType="fitXY"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/olxavatar"/>
    <TextView
        android:id="@+id/tvEnterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="@dimen/sp_28"
        android:layout_marginTop="@dimen/dp_15"
        android:textColor="@color/marine_blue"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_5"/>
    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/sea_green"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/sp_14"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_25"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/folroscent_green"
            android:textSize="@dimen/sp_14"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_25"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCountryCode"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:hint="@string/country_code"/>
        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnPhoneNumLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@color/marine_blue"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>