<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Verify_your_phone">


    <ImageView
        android:id="@+id/ivVerifyPhoneAvatarLogin"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_man" />

    <TextView
        android:id="@+id/tvVerifyPhoneEnterPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_5"
        android:text="@string/verify_your_phone"
        android:textColor="@color/marine_blue"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvVerifyPhoneDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_5"
        android:text="@string/we_will_send_a_confirmation_code_to_your_phone"
        android:textColor="@color/sea_green"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvVerifyPhoneCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/country"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvVerifyPhone_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/phone_number"
            android:textColor="@color/folroscent_green"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEnterVerifyPhoneCountryCode"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:focusable="false"
            android:hint="@string/country_code" />

        <EditText
            android:id="@+id/etEnterVrifyPhonePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnPhoneNumLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@color/marine_blue"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>