<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/google_bg"
    tools:context=".Activities.Google_Login">

    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_220"
        android:src="@drawable/google_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/rectangle_white_bg"
        android:hint="@string/your_name"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivGoogle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/rectangle_white_bg"
        android:hint="@string/enter_email_address"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etName" />


    <EditText
        android:id="@+id/etGooglePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/rectangle_white_bg"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/sp_30"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@drawable/rectangle_red_bg"
        android:fontFamily="cursive"
        android:text="@string/login"
        android:textSize="@dimen/sp_25"
        app:layout_constraintTop_toBottomOf="@id/etGooglePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>